@@ -2953,7 +2953,8 @@ namespace attributes {
                      << "    if (rcpp_isError_gen) {" << std::endl
                      << "        SEXP rcpp_msgSEXP_gen = Rf_asChar(rcpp_result_gen);" << std::endl
                      << "        UNPROTECT(1);" << std::endl
-                     << "        Rf_error(\"%s\", CHAR(rcpp_msgSEXP_gen));" << std::endl
+                                 // Parentheses to prevent masking
+                     << "        (Rf_error)(\"%s\", CHAR(rcpp_msgSEXP_gen));" << std::endl
                      << "    }" << std::endl
                      << "    UNPROTECT(1);" << std::endl
                      << "    return rcpp_result_gen;" << std::endl
